[gd_scene load_steps=10 format=2]

[ext_resource path="res://font/Awake/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://interfaces/ninepatchtest2.png" type="Texture" id=2]
[ext_resource path="res://interfaces/exit_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://interfaces/store/store_item.tscn" type="PackedScene" id=4]
[ext_resource path="res://interfaces/store/store.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="Store" type="CanvasLayer"]
script = ExtResource( 5 )
StoreItem = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color( 0.941176, 0.941176, 0.941176, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 250.0
margin_bottom = 200.0
texture = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect"]
anchor_left = 0.42
anchor_top = 0.07
anchor_right = 0.5
anchor_bottom = 0.07
margin_left = -36.0
margin_right = 260.0
margin_bottom = 310.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/ScrollContainer"]
margin_right = 300.0
margin_bottom = 310.0
rect_min_size = Vector2( 300, 310 )
custom_constants/separation = 12

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 595, 296 )
points = PoolVector2Array( -202.381, -176.011, -202.381, 176.84 )
width = 2.0
default_color = Color( 0.560784, 0.560784, 0.560784, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 232.0
margin_top = 128.0
margin_right = 344.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Item Types"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Label"]
anchor_top = 1.5
anchor_bottom = 1.5
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="CheckBox" parent="Label/VBoxContainer"]
margin_right = 152.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.368627, 0.368627, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
group = SubResource( 3 )
text = "all"

[node name="MachineCheck" type="CheckBox" parent="Label/VBoxContainer"]
margin_top = 34.0
margin_right = 152.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.368627, 0.368627, 0.368627, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = SubResource( 3 )
text = "machines"

[node name="ConsumableCheck" type="CheckBox" parent="Label/VBoxContainer"]
margin_top = 68.0
margin_right = 152.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.290196, 0.290196, 0.290196, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = SubResource( 3 )
text = "consumables"

[node name="ExitButton" parent="." instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 776.0
margin_top = -511.109
margin_right = 816.0
margin_bottom = -471.109

[node name="Description" type="NinePatchRect" parent="."]
margin_left = 322.0
margin_top = 443.0
margin_right = 672.0
margin_bottom = 543.0
texture = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Description"]
margin_left = 16.0
margin_top = 16.0
margin_right = 331.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Item store"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Label/VBoxContainer/All" to="." method="_on_All_pressed"]
[connection signal="pressed" from="Label/VBoxContainer/MachineCheck" to="." method="_on_MachineCheck_pressed"]
[connection signal="pressed" from="Label/VBoxContainer/ConsumableCheck" to="." method="_on_ConsumableCheck_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
